Populate Subscriber Self Rel., Fixes #7188
Made it so that selecting 'Self' for the Insurance Policy Subscriber Relation
will now populate the insurance policy fields with the current patient
as well as the current patient's employer information.

Added a REST API endpoint for /api/patient/{puuid}/employer to grab the
employer data.  This includes corresponding REST controllers, services,
routes, etc.

Fixes #7188 base service join clause fix.
